# micrograd-cpp

./: .gitignore  CMakeLists.txt  main.cpp  module.cpp  module.h  value.cpp  value.h
